--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.specialdark.utopia.shadowtalk" >
 
-    <uses-sdk android:minSdkVersion="19"
-              android:targetSdkVersion="21"/>
+    <uses-sdk
+        android:minSdkVersion="19"
+        android:targetSdkVersion="21" />
 
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -19,9 +24,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".wifi.WiFiDirectActivity"
+            android:configChanges="orientation|keyboardHidden|screenLayout|layoutDirection"
             android:label="@string/app_name"
-            android:launchMode="singleTask"
-            android:configChanges="orientation|keyboardHidden|screenLayout|layoutDirection">
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,8 +34,24 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".wifi.FileTransferService"
-            android:enabled="true"/>
+        <service
+            android:name=".wifi.FileTransferService"
+            android:enabled="true" />
+
+        <activity
+            android:name=".bluetooth.BluetoothChatActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/title_activity_bluetooth_chat" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".bluetooth.DeviceListActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/title_activity_device_list" >
+        </activity>
     </application>
 
 </manifest>
