--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             android:name=".wifi.WiFiDirectActivity"
             android:configChanges="orientation|keyboardHidden|screenLayout|layoutDirection"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,6 +42,7 @@
         <activity
             android:name=".bluetooth.BluetoothChatActivity"
             android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_bluetooth_chat" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,6 +51,7 @@
         </activity>
         <activity
             android:name=".bluetooth.DeviceListActivity"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_device_list" >
         </activity>
