--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,10 +41,10 @@
 
         <activity
             android:name=".bluetooth.BluetoothChatActivity"
-            android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_bluetooth_chat"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysHidden" >
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/BluetoothChatActivityTheme">
             <intent-filter>
                 <action android:name="com.specialdark.utopia.shadowtalk.BLUETOOTH_CHAT" />
 
@@ -66,7 +66,8 @@
             android:name=".ShadowTalkActivity"
             android:label="@string/title_activity_shadow_talk"
             android:screenOrientation="portrait"
-            android:theme="@style/ShadowTalkActivityTheme" >
+            android:theme="@style/ShadowTalkActivityTheme"
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
